.k8s/gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /kafkaui
            pathType: Prefix
            backend:
              service:
                name: kafka-ui-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-api-service
                port:
                  number: 8000
